--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ a {
 
 h1 {
     text-align: center;
-    font-size: 59px;
     border-width: 0px;
     margin: 0px;
     border-bottom: 1px black solid;
-    font-size: 50vw;
+    font-size: 5rem;
 }
+
 
 #grid {
     display: grid;
